--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                 </div>
             </nav>
         </header>
+        <div>
+            <h1>Categories</h1>
+        </div>
     </div>
     
 </body>
