--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/abb77b776b.js" crossorigin="anonymous"></script>
     <title>Bimmaflips</title>
 </head>
@@ -13,8 +15,9 @@
         <header class="header">
             <nav class="topnav">
                 <a id="home" href="index.html"><i class="fas fa-home"></i></a>
-                <a id="trending" href="">Trending</a>
-                <a id="mstore" href="">Mstore</a>
+                <a id="trending" href="">TRENDING</a>
+                <a id="mstore" href="">MODELS</a>
+                <h1 class="fontnav">Bimmaflips</h1>
                 <div class="search-container">
                    <form action="">
                        <input id="search" type="text" placeholder="Search.." name="search">
@@ -23,8 +26,16 @@
                 </div>
             </nav>
         </header>
-        <div>
-            <h1>Categories</h1>
+                                     <!---categories-->
+
+
+        <div class="categories">
+            <div class="cont_1">
+               
+            </div>
+        <div class="cont_2">
+
+        </div>
         </div>
     </div>
     
